--- a/css/default.css
+++ b/css/default.css
@@ -464,11 +464,11 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"] {
    font: 16px/30px 'opensans-bold', sans-serif;
-   background: #11ABB0;
+   background: #3d4145;
    display: inline-block;
 	text-decoration: none;
    letter-spacing: 0;
-   color: #fff;
+   color: #3d4145;
 	padding: 12px 20px;
 	margin-bottom: 18px;
    border: none;
@@ -493,7 +493,7 @@ input[type="submit"]:hover,
 input[type="reset"]:hover,
 input[type="button"]:hover {
    background: #3d4145;
-   color: #fff;
+   color: #3d4145;
 }
 
 .button:active,
@@ -502,7 +502,7 @@ input[type="submit"]:active,
 input[type="reset"]:active,
 input[type="button"]:active {
    background: #3d4145;
-   color: #fff;
+   color: #11ABB0;
 }
 
 .button.full-width,
@@ -804,7 +804,6 @@ properly.
 	margin-right: auto !important;
 	text-align: center !important;
 }
-
 
 
 
