--- a/css/layout.css
+++ b/css/layout.css
@@ -33,7 +33,7 @@ header {
    height: 800px;
    min-height: 500px;
    width: 100%;
-   background: #161415 url no-repeat top center;
+   background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), #161415 url(../images/Birdseye.jpg) no-repeat top center;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
@@ -187,7 +187,7 @@ ul#nav li.current a { color: #F06000; }
 /* ------------------------------------------------------------------ */
 
 #about {
-   background: #2B2B2B;
+   background: #FFFFff;
    padding-top: 96px;
    padding-bottom: 66px;
    overflow: hidden;
@@ -219,10 +219,11 @@ ul#nav li.current a { color: #F06000; }
 #about .main-col { padding-right: 5%; }
 #about .download .button {
    margin-top: 6px;
-   background: #444;
+   background: #11ABB0;
+    color: #11ABB0;
 }
 #about .download .button:hover {
-   background: #fff;
+   background: #3d4145;
    color: #2B2B2B;
 }
 #about .download .button i {
