--- a/css/default.css
+++ b/css/default.css
@@ -768,6 +768,10 @@ properly.
 }
 
 
+#contact .blog-item{
+    
+     background: white;
+}
 
 
 /* ------------------------------------------------------------------ */
