--- a/css/layout.css
+++ b/css/layout.css
@@ -33,7 +33,7 @@ header {
    height: 800px;
    min-height: 500px;
    width: 100%;
-   background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), #161415 url(../images/Birdseye.jpg) no-repeat top center;
+   background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), #161415 url(../images/Birdseye-min.jpg) no-repeat top center;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
@@ -97,6 +97,7 @@ header .social li {
 }
 header .social li a { color: #fff; }
 header .social li a:hover { color: #11ABB0; }
+header .social li a:focus { color: #11ABB0; }
 
 /* scrolldown link */
 header .scrolldown a {
@@ -240,7 +241,6 @@ ul#nav li.current a { color: #F06000; }
 #resume {
    background: #fff;
    padding-top: 90px;
-   padding-bottom: 72px;
    overflow: hidden;
 }
 
@@ -263,9 +263,12 @@ ul#nav li.current a { color: #F06000; }
 #resume .header-col { padding-top: 9px; }
 #resume .main-col { padding-right: 10%; }
 
-.education, .work {
+.education {
+   margin-bottom: 80px;
+}
+
+ .work {
    margin-bottom: 48px;
-   padding-bottom: 24px;
    border-bottom: 1px solid #E8E8E8;
 }
 #resume .info {
